vlib/v/checker/tests/option_map_err.out
vlib/v/checker/tests/option_map_err.vv:22:13: error: type `?map[string]f64` is an Option, it must be unwrapped first; use `op2.opmap?` to do it
   20 |         }
   21 |     }
   22 |     assert op2.opmap['1'] == 1.0
      |                ~~~~~
   23 | }
vlib/v/checker/tests/option_map_err.vv:22:13: error: field `opmap` is an Option, so it should have either an `or {}` block, or `?` at the end
   20 |         }
   21 |     }
   22 |     assert op2.opmap['1'] == 1.0
      |                ~~~~~
   23 | }
